--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
     "store": "0.x",
     "sitemap": "0.x",
     "docs": "0.x",
-    "react": "3.x"
+    "react": "3.x",
+    "assets": "0.x"
   },
-  "mustUpdateAt": "2018-09-05",
   "scripts": {
     "postreleasy": "vtex publish --verbose"
   },
@@ -62,7 +62,8 @@
     "vtex.product-specifications": "1.x",
     "vtex.tab-layout": "0.x",
     "vtex.responsive-layout": "0.x",
-    "vtex.css-handles": "1.x"
+    "vtex.css-handles": "1.x",
+    "vtex.product-context": "0.x"
   },
   "peerDependencies": {
     "vtex.reviews-and-ratings": "2.x"
