Add vtex.store-newsletter dependency

--- a/manifest.json
+++ b/manifest.json
@@ -63,7 +63,8 @@
     "vtex.tab-layout": "0.x",
     "vtex.responsive-layout": "0.x",
     "vtex.css-handles": "1.x",
-    "vtex.product-context": "0.x"
+    "vtex.product-context": "0.x",
+    "vtex.store-newsletter": "1.x"
   },
   "peerDependencies": {
     "vtex.reviews-and-ratings": "2.x"
