Implement Newsletter component

--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -12,7 +12,7 @@
       "info-card#home",
       "rich-text#question",
       "rich-text#link",
-      "newsletter"
+      "my-newsletter"
     ]
   },
 
