--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -6,7 +6,9 @@
        * For example, `flex-layout.row#deals` is defined in the `deals.json` file. */
       "__fold__.experimentalLazyAssets",
       "flex-layout.row#deals",
-      "my-shelf",
+      "section-shelf#mode1",
+      "section-shelf#mode2",
+      "section-product-grid",
       "rich-text#shelf-title",
       "flex-layout.row#shelf",
       "info-card#home",
@@ -14,6 +16,17 @@
       "rich-text#link",
       "newsletter"
     ]
+  },
+
+  "section-shelf#mode1": {
+    "props": {
+      "mode": "always-slider"
+    }
+  },
+  "section-shelf#mode2": {
+    "props": {
+      "mode": "desktop-slider-mobile-list"
+    }
   },
 
   "list-context.image-list#demo": {
