--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,7 @@
     "sitemap": "0.x",
     "docs": "0.x",
     "react": "3.x",
-    "assets": "0.x",
-    "messages": "1.x"
+    "assets": "0.x"
   },
   "scripts": {
     "postreleasy": "vtex publish --verbose"
