--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -6,13 +6,13 @@
        * For example, `flex-layout.row#deals` is defined in the `deals.json` file. */
       "__fold__.experimentalLazyAssets",
       "flex-layout.row#deals",
-      "my-shelf",
+      "section-shelf",
       "rich-text#shelf-title",
       "flex-layout.row#shelf",
       "info-card#home",
       "rich-text#question",
       "rich-text#link",
-      "my-newsletter"
+      "section-newsletter"
     ]
   },
 
