--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,10 @@
   "scripts": {
     "postreleasy": "vtex publish --verbose"
   },
+  "billingOptions": {
+    "type": "free",
+    "availableCountries": ["*"]
+  },
   "dependencies": {
     "vtex.store": "2.x",
     "vtex.store-header": "2.x",
