--- a/react/package.json
+++ b/react/package.json
@@ -8,6 +8,7 @@
     "apollo-client": "^2.6.8",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
+    "react-content-loader": "^6.0.1",
     "react-dom": "^16.12.0",
     "react-intl": "^3.12.0"
   },
