Adding Product Grid component and section

--- a/manifest.json
+++ b/manifest.json
@@ -69,7 +69,9 @@
     "vtex.css-handles": "1.x",
     "vtex.product-context": "0.x",
     "vtex.store-newsletter": "1.x",
-    "vtex.store-graphql": "2.x"
+    "vtex.store-graphql": "2.x",
+    "vtex.list-context": "0.x",
+    "vtex.product-availability": "0.x"
   },
   "peerDependencies": {
     "vtex.reviews-and-ratings": "2.x"
