--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -2,10 +2,8 @@
   "store.home": {
     "blocks": [
       "section-main-banner-carousel",
-      /* You can make references to blocks defined in other files.
-       * For example, `flex-layout.row#deals` is defined in the `deals.json` file. */
       "__fold__.experimentalLazyAssets",
-      "flex-layout.row#deals",
+      "section-highlights",
       "section-shop-by-category#home",
       "section-shelf",
       "rich-text#shelf-title",
