Remove header and footer from OrderPlaced page

--- a/store/blocks.jsonc
+++ b/store/blocks.jsonc
@@ -9,7 +9,37 @@
  */
 {
   "store.orderplaced": {
+    "parent": {
+      "header": "header#empty",
+      "footer": "footer#empty"
+    },
     "blocks": ["order-placed"]
+  },
+
+  "header#empty": {
+    "blocks": [
+      "header-layout.desktop#empty",
+      "header-layout.mobile#empty"
+    ]
+  },
+  "header-layout.desktop#empty": {
+    "children": []
+  },
+  "header-layout.mobile#empty": {
+    "children": []
+  },
+
+  "footer#empty": {
+    "blocks": [
+      "footer-layout.desktop#empty",
+      "footer-layout.mobile#empty"
+    ]
+  },
+  "footer-layout.desktop#empty": {
+    "children": []
+  },
+  "footer-layout.mobile#empty": {
+    "children": []
   },
 
   "store.account": {
