--- a/store/blocks/orderplaced.jsonc
+++ b/store/blocks/orderplaced.jsonc
@@ -78,7 +78,7 @@
     "children": ["responsive-layout.desktop#order-options-desktop"]
   },
   "responsive-layout.desktop#order-options-desktop": {
-    "children": ["op-order-options"]
+    "children": ["op-order-options#desktop"]
   },
   // payment section
   "op-section#payments": {
@@ -97,7 +97,13 @@
   "op-order-options#mobile": {
     "props": {
       "blockClass": "mobile",
-      "fullWidth": true
+      "fullWidth": true,
+      "myAccountPath": "/api/io/account"
+    }
+  },
+  "op-order-options#desktop": {
+    "props": {
+      "myAccountPath": "/api/io/account"
     }
   },
   "op-section#pickup-packages": {
