--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "vendor": "storeframework",
   "name": "store-theme",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
@@ -15,7 +15,9 @@
   },
   "billingOptions": {
     "type": "free",
-    "availableCountries": ["*"]
+    "availableCountries": [
+      "*"
+    ]
   },
   "dependencies": {
     "vtex.store": "2.x",
