Simplify blocks and all store pages

--- a/store/blocks/order-placed.jsonc
+++ b/store/blocks/order-placed.jsonc
@@ -1,4 +1,7 @@
 {
+  "store.orderplaced": {
+    "blocks": ["order-placed"]
+  },
   "order-placed": {
     "blocks": ["op-header", "op-order"]
   },
